docs: component descriptions

--- a/src/components/composition/Row/Row.scss
+++ b/src/components/composition/Row/Row.scss
@@ -1,6 +1,20 @@
+@use '../../../styles/variables/spacing';
+
 evg-row {
+  --evg-row-gap: var(--evg-spacing-md);
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  gap: var(--evg-spacing-8);
+  gap: var(--evg-row-gap);
+
+  /* gap */
+  @each $size in spacing.$sizes {
+    &[gap='#{$size}'] {
+      --evg-row-gap: var(--evg-spacing-#{$size});
+    }
+  }
+
+  &[gap='none'] {
+    --evg-row-gap: 0;
+  }
 }
