--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -17,7 +17,15 @@ h3,
 h4,
 h5,
 h6 {
-  @include title.title;
+  color: var(--evg-theme-heading-color);
+  font-weight: var(--evg-font-weight-bold);
+  line-height: var(--evg-font-line-height-sm);
+  margin: 0;
+
+  b,
+  strong {
+    font-weight: var(--evg-font-weight-black);
+  }
 }
 
 h1,
