feat: more clicky things and new button tokens

--- a/src/components/control/Chip/Chip.scss
+++ b/src/components/control/Chip/Chip.scss
@@ -54,6 +54,10 @@ evg-chip {
       }
     }
 
+    &:active {
+      transform: translateY(1px);
+    }
+
     &:not(:active):focus-visible {
       --_background: var(--_background-hover);
       --_border-color: var(--_border-color-hover);
