feat!: update alert colors to just sentiment colors

--- a/src/components/canvas/Alert/Alert.scss
+++ b/src/components/canvas/Alert/Alert.scss
@@ -1,5 +1,5 @@
 evg-alert {
-  --_background: var(--evg-color-sky-75);
+  --_background: var(--evg-sentiment-neutral);
   --_color: var(--evg-color-forest);
   background: var(--_background);
   border-radius: var(--evg-radius-md);
@@ -7,27 +7,11 @@ evg-alert {
   display: block;
   padding: var(--evg-spacing-md);
 
-  &[variant='postive'] {
-    --_background: var(--evg-sentiment-positive);
-  }
-
-  &[variant='postive light'] {
-    --_background: var(--evg-sentiment-positive-light);
-  }
-
-  &[variant='negative'] {
-    --_background: var(--evg-sentiment-negative-light);
-  }
-
-  &[variant='negative light'] {
-    --_background: var(--evg-sentiment-negative-lightest);
-  }
-
-  &[variant='neutral'] {
-    --_background: var(--evg-sentiment-neutral-medium);
-  }
-
-  &[variant='neutral light'] {
-    --_background: var(--evg-sentiment-neutral-lightest);
+  @each $variant in positive, positive-light, negative, negative-light, neutral,
+    neutral-light
+  {
+    &[variant='#{$variant}'] {
+      --_background: var(--evg-sentiment-#{$variant});
+    }
   }
 }
