--- a/src/components/content/HelpText/HelpText.scss
+++ b/src/components/content/HelpText/HelpText.scss
@@ -8,12 +8,10 @@ evg-help-text {
   font-size: var(--evg-font-size-body-sm);
   padding: var(--evg-spacing-sm) var(--evg-spacing-md);
 
-  &[type='positive'] {
-    --_background-color: var(--evg-sentiment-positive-lightest);
-  }
-
-  &[type='negative'] {
-    --_background-color: var(--evg-sentiment-negative-lightest);
+  @each $variant in postive, negative, neutral {
+    &[variant='#{$variant}'] {
+      --_background-color: var(--evg-sentiment-#{$variant}-light);
+    }
   }
 
   &[inline] {
