feat: increase badge border radius

--- a/src/components/content/Badge/Badge.scss
+++ b/src/components/content/Badge/Badge.scss
@@ -3,7 +3,7 @@ evg-badge {
   --_color: var(--evg-color-forest);
 
   background: var(--_background);
-  border-radius: var(--evg-radius-xs);
+  border-radius: var(--evg-radius-sm);
   color: var(--_color);
   display: inline-block;
   font-family: var(--evg-font-family-heading);
