feat: npm package

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,4 @@
-@use 'normalize.css/normalize';
-@use '@wrap.ngo/tokens/dist';
+@use 'normalize';
 
 @use 'base/scaffolding';
 @use 'base/typography';
@@ -53,3 +52,6 @@
 @use '../components/content/List/List';
 @use '../components/content/Thumbnail/Thumbnail';
 @use '../components/content/Label/Label';
+
+// Import CSS files after all @use rules
+@import '@wrap.ngo/tokens/dist/index.css';
