feat(evg-chip): add span as a child slot option

--- a/src/components/control/Chip/Chip.scss
+++ b/src/components/control/Chip/Chip.scss
@@ -15,7 +15,8 @@ evg-chip {
 
   button,
   a,
-  label {
+  label,
+  span {
     align-items: center;
     appearance: none;
     background: var(--_background);
